# lifecycle

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
derive-system/: Cargo.toml  README.md
derive-system/src/: lib.rs  structs.rs  system.rs
derive-system/tests/: entrypoint.rs  simple.rs
lifecycle/: Cargo.toml  README.md
lifecycle/src/tests/: mocks.rs  mod.rs
src/: lib.rs  tests.rs
src/tests/: lifecycle.rs  mocks.rs  mod.rs  system.rs
