[package]
name = "derive-system"
version = "0.1.0"
authors = ["Otávio Pace <otaviopp8@gmail.com>"]
description = "Rust implementation of https://github.com/stuartsierra/component"
edition = "2018"
readme = "README.md"
keywords = ["lifecycle", "clojure", "component", "system", "derive"]
documentation = "https://docs.rs/derive-system/"
repository = "https://github.com/otaviopace/lifecycle"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
lifecycle = { path = "../lifecycle" }
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]
