[package]
name = "lifecycle"
version = "0.1.0"
authors = ["Otávio Pace <otaviopp8@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]
