[package]
name = "lifecycle"
version = "0.1.0"
authors = ["Otávio Pace <otaviopp8@gmail.com>"]
edition = "2018"
readme = "README.md"
keywords = ["lifecycle", "clojure", "component", "system"]
documentation = "https://docs.rs/lifecycle/"
repository = "https://github.com/otaviopace/lifecycle"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]
