[package]
name = "lifecycle"
version = "0.1.1"
authors = ["Otávio Pace <otaviopp8@gmail.com>"]
description = "Rust implementation of https://github.com/stuartsierra/component"
edition = "2021"
readme = "README.md"
keywords = ["lifecycle", "clojure", "component", "system"]
documentation = "https://docs.rs/lifecycle/"
repository = "https://github.com/otaviopace/lifecycle"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]
